@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-12T08:19:43Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-08-12T16:25:49Z",
+  "count" : 7,
+  "count_minmax" : [ 2, 7 ],
+  "count_decinc" : [ -0, +7 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 2, 6 ],
+  "uniques_decinc" : [ -0, +6 ]
 }
