@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-08-12T08:19:43Z",
+  "timestamp" : "2022-08-12T16:25:49Z",
   "count_outdated" : 295,
   "uniques_outdated" : 146,
-  "count" : 305,
-  "uniques" : 156,
+  "count" : 309,
+  "uniques" : 159,
   "clones" : [
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 7,
+      "count_minmax": [ 2, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 2, 6 ]
     }
   ]
 }
