@@ -1,11 +1,11 @@
 {
-  "count": 10,
-  "uniques": 6,
+  "count": 14,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-30T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
